Reintroduce our custom list of extra --add-opens parameters for the compile server and build process on top of the parameters provided by the platform #SCL-20805, #SCL-20970